// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feeds.actions folderDelete() handles removing a folder 1`] = `
Array [
  Object {
    "type": "FOLDERS_DELETE_BEGIN",
  },
  Object {
    "lastUID": 1,
    "messages": Immutable.List [
      Object {
        "level": "success",
        "message": "Folder removed.",
        "uid": 1,
      },
    ],
    "type": "MESSAGES_ADD_COMPLETE",
  },
  Object {
    "folders": Immutable.OrderedMap {},
    "type": "FOLDERS_DELETE_COMPLETE",
  },
  Object {
    "type": "FILTER_RESET",
  },
]
`;

exports[`feeds.actions folderSave() handles adding a new folder 1`] = `
Array [
  Object {
    "type": "FOLDERS_ADD_BEGIN",
  },
  Object {
    "lastUID": 1,
    "messages": Immutable.List [
      Object {
        "level": "success",
        "message": "Folder added.",
        "uid": 1,
      },
    ],
    "type": "MESSAGES_ADD_COMPLETE",
  },
  Object {
    "folders": Immutable.OrderedMap {
      "5b33c4bab2438d5708dc1967": Object {
        "__v": 0,
        "_id": "5b33c4bab2438d5708dc1967",
        "name": "Random",
        "order": 0,
      },
    },
    "type": "FOLDERS_ADD_COMPLETE",
  },
]
`;

exports[`feeds.actions folderSave() handles saving an existing folder 1`] = `
Array [
  Object {
    "type": "FOLDERS_UPDATE_BEGIN",
  },
  Object {
    "lastUID": 1,
    "messages": Immutable.List [
      Object {
        "level": "success",
        "message": "Folder saved.",
        "uid": 1,
      },
    ],
    "type": "MESSAGES_ADD_COMPLETE",
  },
  Object {
    "folders": Immutable.OrderedMap {
      "5b33c4bab2438d5708dc1967": Object {
        "__v": 0,
        "_id": "5b33c4bab2438d5708dc1967",
        "name": "Random",
        "order": 0,
      },
    },
    "type": "FOLDERS_UPDATE_COMPLETE",
  },
]
`;

exports[`feeds.actions foldersGetAll() handles getting the folders 1`] = `
Array [
  Object {
    "type": "FOLDERS_FETCHING",
  },
  Object {
    "folders": Immutable.OrderedMap {
      "5b33c4bab2438d5708dc1967": Object {
        "__v": 0,
        "_id": "5b33c4bab2438d5708dc1967",
        "name": "Random",
        "order": 0,
      },
      "5b33c57eb2438d5708dc1968": Object {
        "__v": 0,
        "_id": "5b33c57eb2438d5708dc1968",
        "name": "Programming",
        "order": 1,
      },
      "0": Object {
        "_id": "0",
        "name": "Uncategorized",
        "order": Infinity,
      },
    },
    "type": "FOLDERS_RECEIVED",
  },
]
`;

exports[`feeds.actions foldersReorder() handles reordering folders 1`] = `
Array [
  Object {
    "lastUID": 1,
    "messages": Immutable.List [
      Object {
        "level": "success",
        "message": "Folders reordered.",
        "uid": 1,
      },
    ],
    "type": "MESSAGES_ADD_COMPLETE",
  },
  Object {
    "type": "FOLDERS_FETCHING",
  },
]
`;
